argo-cd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      containers:
        - name: argocd-server
          image: nginx:latest
          ports:
            - containerPort: 8080
            - containerPort: 443
